--- a/app.html
+++ b/app.html
@@ -61,9 +61,10 @@
             <section id="players" class="section hidden">
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-xl font-bold">Players</h2>
-                    <button onclick="showModal('addPlayerModal')" class="btn-primary">
+                    <!-- <button onclick="showModal('addPlayerModal')" class="btn-primary">
                         + Add Player
                     </button>
+                    -->
                 </div>
                 <div id="playersList"></div>
             </section>
