--- a/app.html
+++ b/app.html
@@ -64,7 +64,7 @@
                     <!-- <button onclick="showModal('addPlayerModal')" class="btn-primary">
                         + Add Player
                     </button>
-                    -->
+                -->
                 </div>
                 <div id="playersList"></div>
             </section>
@@ -210,23 +210,23 @@
                 <h2 class="text-xl font-bold">Edit Player</h2>
                 <button onclick="hideModal('editPlayerModal')" class="text-gray-500">&times;</button>
             </div>
-            <form id="editPlayerForm" class="space-y-4">
+                <form id="editPlayerForm" class="space-y-4">
                 <input type="hidden" id="editPlayerId">
                 <div>
                     <label class="block mb-1">First Name</label>
-                    <input type="text" id="editPlayerFirstName" required>
+                    <input type="text" id="editPlayerFirstName" class="w-full" required>
                 </div>
                 <div>
                     <label class="block mb-1">Last Name</label>
-                    <input type="text" id="editPlayerLastName" required>
+                    <input type="text" id="editPlayerLastName" class="w-full" required>
                 </div>
                 <div>
                     <label class="block mb-1">Email</label>
-                    <input type="email" id="editPlayerEmail" required>
+                    <input type="email" id="editPlayerEmail" class="w-full" required>
                 </div>
                 <div>
                     <label class="block mb-1">Mobile</label>
-                    <input type="tel" id="editPlayerMobile" required>
+                    <input type="tel" id="editPlayerMobile" class="w-full" required>
                 </div>
                 <button type="submit" class="btn-primary w-full">Update Player</button>
             </form>
