--- a/app.html
+++ b/app.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="bg-white rounded-lg shadow p-4 mb-4">
-                    <h2 class="text-xl font-bold mb-4">Recent Players</h2>
+                    <h2 class="text-xl font-bold mb-4">Recent Players Added</h2>
                     <div id="recentPlayers"></div>
                 </div>
             </section>
@@ -91,7 +91,7 @@
             </div>
             <form id="addPlayDateForm" class="space-y-4">
                 <div>
-                    <label class="block mb-1">Court</label>
+                    <label class="block mb-1">Location</label>
                     <select id="courtSelect" required></select>
                 </div>
                 <div>
@@ -272,7 +272,7 @@
             <form id="editPlayDateForm" class="space-y-4">
                 <input type="hidden" id="editPlayDateId">
                 <div>
-                    <label class="block mb-1">Court</label>
+                    <label class="block mb-1">Location</label>
                     <select id="editPlayDateCourtSelect" required>
                         <!-- Will be populated with courts -->
                     </select>
