--- a/app.html
+++ b/app.html
@@ -325,12 +325,11 @@
             <h2 class="text-xl font-bold">Manage Players</h2>
             <button onclick="hideModal('managePlayersModal')" class="text-gray-500">&times;</button>
         </div>
-        <div id="playerManagementList" class="space-y-2">
+        <div id="playerManagementList" class="space-y-2 max-h-96 overflow-y-auto pr-2">
             <!-- Will be populated dynamically -->
         </div>
     </div>
 </div>
-
     <!-- Firebase Scripts -->
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
