--- a/app.html
+++ b/app.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="ml-3">
                             <p class="text-sm text-blue-700">
-                                Tip: Consider editing your player profile to add your self-rating.
+                                Tip: Add your self ranking to your player profile to help others know your skill level.
                             </p>
                         </div>
                     </div>
@@ -75,11 +75,11 @@
             <!-- Players Section -->
             <section id="players" class="section hidden">
                 <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-xl font-bold">Players</h2>
+                    <h2 class="text-xl font-bold">Players (<span id="playerCount">0</span>)</h2>
                     <!-- <button onclick="showModal('addPlayerModal')" class="btn-primary">
                         + Add Player
                     </button>
-                -->
+                    -->
                 </div>
                 <div id="playersList"></div>
             </section>
