--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danville Pickleball Pals</title>
+    <title>Blackhawk Pickle</title>
     <link rel="stylesheet" href="login_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
             
             <!-- Login View -->
             <div id="loginView">
-                <h2>Danville Pickleball Pals</h2>
+                <h2>Blackhawk Pickle App</h2>
                 <input type="email" id="emailInput" placeholder="Email" required>
                 <input type="password" id="passwordInput" placeholder="Password" required>
                 <button id="loginButton" class="submit-btn">Login</button>
