--- a/app.html
+++ b/app.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackhawk Pickle App</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <!-- Add to Calendar Button -->
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Blackhawk Pickle App</title>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+<!-- SEO Meta Tags -->
+<meta name="description" content="Blackhawk Pickle App is for planning and managing our local Pickleball group">
+<meta name="keywords" content="Pickleball, blackhawk sports complex, blackhawk country club>
+<meta name="author" content="David Lewis">
+<!-- Open Graph Title -->
+<meta property="og:title" content="Blackhawk Pickle - For Getting Players Together Easily" />
+<!-- Open Graph Description -->
+<meta property="og:description" content="Blackhawk Pickle App is for planning and managing our local Pickleball group" />
+<!-- Open Graph URL -->
+<meta property="og:url" content="https://www.blackhawkpickle.com" />
+
+<!-- Open Graph Image -->
+<meta property="og:image" content="https://www.gathurup.com/dpgicon.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height="1200" />
+
+<!-- Open Graph Type -->
+<meta property="og:type" content="website" />
 </head>
 <body class="bg-gray-100">
 
