--- a/app.html
+++ b/app.html
@@ -32,7 +32,7 @@
         <!-- Header -->
         <header class="bg-white p-4 shadow-md">
             <div class="container mx-auto flex justify-between items-center">
-                <h1 class="text-2xl text-black-600 font-bold">Danville Pickleball Pals</h1>
+                <h1 class="text-2xl text-black-600 font-bold">Blackhawk Pickleball</h1>
                 <button onclick="logout()" class="btn-secondary">Sign Out</button>
             </div>
             <div id="currentUserDisplay" class="text-sm text-gray-600 flex items-center gap-2">
