--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- SEO Meta Tags -->
 <meta name="description" content="Blackhawk Pickle App is for planning and managing our local Pickleball group">
-<meta name="keywords" content="Pickleball, blackhawk sports complex, blackhawk country club>
+<meta name="keywords" content="Pickleball, blackhawk sports complex, blackhawk country club">
 <meta name="author" content="David Lewis">
 <!-- Open Graph Title -->
 <meta property="og:title" content="Blackhawk Pickle - For Getting Players Together Easily" />
@@ -18,10 +18,9 @@
 <meta property="og:url" content="https://www.blackhawkpickle.com" />
 
 <!-- Open Graph Image -->
-<meta property="og:image" content="https://www.gathurup.com/dpgicon.png" />
+<meta property="og:image" content="https://blackhawkpickle.com/dpgicon.png" />
 <meta property="og:image:width" content="1200" />
-<meta property="og:image:height="1200" />
-
+<meta property="og:image:height" content="1200" />
 <!-- Open Graph Type -->
 <meta property="og:type" content="website" />
 </head>
