--- a/app.html
+++ b/app.html
@@ -6,9 +6,8 @@
 <title>Blackhawk Pickle App</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
-<!-- SEO Meta Tags -->
 <meta name="description" content="Blackhawk Pickle App is for planning and managing our local Pickleball group">
-<meta name="keywords" content="Pickleball, blackhawk sports complex, blackhawk country club>
+<meta name="keywords" content="Pickleball, blackhawk sports complex, blackhawk country club">
 <meta name="author" content="David Lewis">
 <!-- Open Graph Title -->
 <meta property="og:title" content="Blackhawk Pickle - For Getting Players Together Easily" />
@@ -18,10 +17,9 @@
 <meta property="og:url" content="https://www.blackhawkpickle.com" />
 
 <!-- Open Graph Image -->
-<meta property="og:image" content="https://www.gathurup.com/dpgicon.png" />
+<meta property="og:image" content="https://blackhawkpickle.com/dpgicon.png" />
 <meta property="og:image:width" content="1200" />
-<meta property="og:image:height="1200" />
-
+<meta property="og:image:height" content="1200" />
 <!-- Open Graph Type -->
 <meta property="og:type" content="website" />
 </head>
