--- a/app.html
+++ b/app.html
@@ -427,5 +427,7 @@
     
     <!-- Application Script -->
     <script type="module" src="script.js"></script>
+    <!-- Add to Calendar Script -->
+    <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
 </body>
 </html>
