--- a/app.html
+++ b/app.html
@@ -392,19 +392,19 @@
 
 <!-- Add new modal for managing active players -->
 <div id="updateRoundRobinModal" class="modal">
-    <div class="modal-content">
+    <div class="modal-content max-w-2xl">
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-bold">Update Active Players</h2>
-            <button onclick="hideModal('updateRoundRobinModal')" class="text-gray-500">&times;</button>
+            <button onclick="hideModal('updateRoundRobinModal')" class="text-gray-500 hover:text-gray-700 text-xl">&times;</button>
         </div>
-        <div id="activePlayersList" class="space-y-2 mb-4">
+        <div id="activePlayersList" class="space-y-2 max-h-96 overflow-y-auto pr-2 mb-4">
             <!-- Will be populated dynamically -->
         </div>
-        <div class="flex gap-2">
-            <button onclick="regenerateSchedule()" 
-            class="w-full px-4 py-2 text-white bg-blue-500 hover:bg-blue-600 rounded-md transition duration-200 ease-in-out flex items-center justify-center gap-2">
-            <span class="icon">🔄</span>Regenerate Schedule
-        </button>
+        <div class="border-t pt-4">
+            <button onclick="regenerateAndShowSchedule()" 
+                class="w-full px-4 py-2 text-white bg-blue-500 hover:bg-blue-600 rounded-md transition duration-200 ease-in-out flex items-center justify-center gap-2">
+                <span class="icon">🔄</span>Regenerate Schedule
+            </button>
         </div>
     </div>
 </div>
