--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             <p>Pickleball Tracker is the result of combining my passion for the sport with my software development skills. It's designed to be the perfect companion for players who want to focus on their game while having a reliable way to track their matches.</p>
         </section>
 
+       <a href="./support.html" class="privacy-link">Support and FAQ</a>
         <a href="./privacy.html" class="privacy-link">Privacy Policy</a>
     </div>
 
