--- a/support.html
+++ b/support.html
@@ -179,7 +179,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Dave Lewis. All rights reserved.</p>
+        <p>&copy; 2025 David Lewis. All rights reserved.</p>
     </footer>
 </body>
 </html> 
