--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dave Lewis - Pickleball Enthusiast & App Developer</title>
+    <title>David Lewis - Pickleball Enthusiast & App Developer</title>
     <style>
         :root {
             --primary-color: #007AFF;
@@ -124,7 +124,7 @@
 </head>
 <body>
     <header>
-        <h1>Dave Lewis</h1>
+        <h1>David Lewis</h1>
         <p class="subtitle">Pickleball Enthusiast & App Developer</p>
     </header>
 
