--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h2>Pickleball Tracker</h2>
             <p>As a passionate pickleball player, I understand the importance of tracking progress and remembering great matches. That's why I created Pickleball Tracker – a simple, intuitive app designed to enhance your pickleball experience.</p>
             
-            <a href="https://apps.apple.com/app/your-app-id">
+            <a href="https://apps.apple.com/us/app/pickleball-tracker/id6744275703">
                 <img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" 
                      alt="Download on the App Store" 
                      class="app-store-badge">
