--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
                 <img src="Game History.png" alt="Game History Screen - Track your pickleball matches">
             </div>
             <div class="screenshot">
-                <img src="Stats.png" alt="Stats Screen - Monitor your progress">
+                <img src="Stats.png" alt="Stats Screen - Monitor your growth">
+            </div>
+              <div class="screenshot">
+                <img src="badges.png" alt="Earn Badges - Rewards for your progress">
             </div>
         </section>
 
