--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@
                      class="app-store-badge">
             </a>
         </section>
-
+<div class="feature-section">
+        <h2>Now Available for iPhone and Apple Watch!</h2>
+        <div class="device-section">
+            <div class="device-item">
+                <div class="device-icon">📱</div>
+                <h3>iPhone App</h3>
+                <p>Track games, manage players, and view detailed stats</p>
+            </div>
+            <div class="device-item">
+                <div class="device-icon">⌚️</div>
+                <h3>Watch App</h3>
+                <p>Quick game entry right from your wrist</p>
+            </div>
+        </div>
+    </div>
         <div class="features">
             <div class="feature-card">
                 <h3>Track Your Games</h3>
