--- a/feedback.html
+++ b/feedback.html
@@ -74,7 +74,7 @@
 <body>
     <div class="header">
         <a href="index.html" class="back-button">← Back to Home</a>
-        <img src="app-icon.png" alt="Pickleball Tracker Icon" class="app-icon">
+       <img src="pickleball_tracker_splash_icon.png" alt="Pickleball Tracker Icon" class="app-icon">
         <h1>Share Your Feedback</h1>
         <p>Help make Pickleball Tracker even better!</p>
     </div>
@@ -103,13 +103,13 @@
             <li>Apple Watch companion app</li>
             <li>Achievement badges</li>
             <li>Detailed player statistics</li>
-            <li>Game history tracking</li>
+            <li>Game history tracking and editing</li>
         </ul>
     </div>
 
     <div class="content-section">
         <h2>Quick Response Promise</h2>
-        <p>We read every email and typically respond within 24-48 hours. While we can't implement every suggestion immediately, we carefully consider all feedback for future updates.</p>
+        <p>We read every email and typically respond same day or within 24-48 hours depending on volume. While we can't implement every suggestion immediately, we carefully consider all feedback for future updates.</p>
         <p>For urgent support questions, please visit our <a href="support.html" class="email">Support Page</a> first.</p>
     </div>
 
