--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
              <div class="screenshot">
                 <img src="New Game.png" alt="New Game Screen - Easy team setup">
             </div>
+                <div class="screenshot">
+                <img src="applewatch.png" alt="Apple Watch Companion - Store your phone in your bag">
+            </div>
             <div class="screenshot">
                 <img src="Player List.png" alt="Player List Screen - Manage your players">
             </div>
@@ -183,6 +186,9 @@
             </div>
             <div class="screenshot">
                 <img src="Stats.png" alt="Stats Screen - Monitor your growth">
+            </div>
+               <div class="screenshot">
+                <img src="Stats2.png" alt="Stats Screen - Monitor your growth">
             </div>
               <div class="screenshot">
                 <img src="badges.png" alt="Earn Badges - Rewards for your progress">
@@ -196,6 +202,8 @@
         </section>
 
        <a href="./support.html" class="privacy-link">Support and FAQ</a>
+        <p></p>
+        <a href="./feedback.html" class="privacy-link">Feedback and Suggestions</a>
         <p></p>
         <a href="./privacy.html" class="privacy-link">Privacy Policy</a>
     </div>
