--- a/index.html
+++ b/index.html
@@ -172,26 +172,26 @@
 
         <section class="screenshots">
              <div class="screenshot">
-                <img src="New Game.png" alt="New Game Screen - Easy team setup">
+                <img src="1.png" alt="New Game Screen - Easy team setup">
             </div>
                 <div class="screenshot">
-                <img src="applewatch.png" alt="Apple Watch Companion - Store your phone in your bag">
+                <img src="2.png" alt="Apple Watch Companion - Store your phone in your bag">
             </div>
             <div class="screenshot">
-                <img src="Player List.png" alt="Player List Screen - Manage your players">
+                <img src="3.png" alt="Statistics - Get better with insights">
             </div>
             
             <div class="screenshot">
-                <img src="Game History.png" alt="Game History Screen - Track your pickleball matches">
+                <img src="4.png" alt="Statistics - Track teammates and opponents">
             </div>
             <div class="screenshot">
-                <img src="Stats.png" alt="Stats Screen - Monitor your growth">
+                <img src="5.png" alt="Earn Achievements - Earn badges for your progress">">
             </div>
                <div class="screenshot">
-                <img src="Stats2.png" alt="Stats Screen - Monitor your growth">
+                <img src="6.png" alt="Game History - View your game history">
             </div>
               <div class="screenshot">
-                <img src="badges.png" alt="Earn Badges - Rewards for your progress">
+                <img src="7.png" alt="Players - Stores your player list"> 
             </div>
         </section>
 
