--- a/feedback.html
+++ b/feedback.html
@@ -88,9 +88,9 @@
             <p>For urgent support questions, please visit our <a href="support.html" class="email">Support Page</a> first.</p>
         </div>
 
-        <div class="footer">
-            <p>© 2025 Pickleball Tracker. All rights reserved.</p>
-        </div>
+        <footer>
+            <p>&copy; 2025 David Lewis. All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html> 
