--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Pickleball Tracker. All rights reserved.</p>
+        <p>&copy; 2025 David Lewis. All rights reserved.</p>
     </footer>
 </body>
 </html> 
