--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.blackhawkpickle.com/privacy">
+    <meta property="og:url" content="https://www.blackhawkpickle.com/privacy.html">
     <meta property="og:title" content="Pickleball Tracker Privacy Policy">
     <meta property="og:description" content="Your privacy matters. Learn how Pickleball Tracker protects your data and ensures your game information stays secure and private.">
     <meta property="og:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
@@ -23,7 +23,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.blackhawkpickle.com/privacy">
+    <meta name="twitter:url" content="https://www.blackhawkpickle.com/privacy.html">
     <meta name="twitter:title" content="Pickleball Tracker Privacy Policy">
     <meta name="twitter:description" content="Your privacy matters. Learn how Pickleball Tracker protects your data and ensures your game information stays secure and private.">
     <meta name="twitter:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
@@ -34,7 +34,7 @@
     <meta name="robots" content="index, follow">
     <meta name="application-name" content="Pickleball Tracker">
     <meta name="apple-itunes-app" content="app-id=6744275703">
-    <link rel="canonical" href="https://www.blackhawkpickle.com/privacy">
+    <link rel="canonical" href="https://www.blackhawkpickle.com/privacy.html">
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -108,7 +108,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 David Lewis. All rights reserved.</p>
+        <p>&copy; 2026 David Lewis. All rights reserved.</p>
     </footer>
 </body>
 </html> 
