--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.blackhawkpickle.com/support">
+    <meta property="og:url" content="https://www.blackhawkpickle.com/support.html">
     <meta property="og:title" content="Pickleball Tracker Support - Help & Tutorials">
     <meta property="og:description" content="Complete guide to using Pickleball Tracker app. Track scores, manage players, and analyze your performance on iPhone and Apple Watch.">
     <meta property="og:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
@@ -23,7 +23,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.blackhawkpickle.com/support">
+    <meta name="twitter:url" content="https://www.blackhawkpickle.com/support.html">
     <meta name="twitter:title" content="Pickleball Tracker Support - Help & Tutorials">
     <meta name="twitter:description" content="Complete guide to using Pickleball Tracker app. Track scores, manage players, and analyze your performance on iPhone and Apple Watch.">
     <meta name="twitter:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
@@ -34,7 +34,7 @@
     <meta name="robots" content="index, follow">
     <meta name="application-name" content="Pickleball Tracker">
     <meta name="apple-itunes-app" content="app-id=6744275703">
-    <link rel="canonical" href="https://www.blackhawkpickle.com/support">
+    <link rel="canonical" href="https://www.blackhawkpickle.com/support.html">
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -81,10 +81,9 @@
                 <h3>Managing Players</h3>
                 <p>Adding players to your game is simple and intuitive on both devices:
                     <ul>
-                        <li><strong>Adding Teammates (Blue Boxes):</strong> Tap the blue boxes to select or add teammates to your team</li>
-                        <li><strong>Adding Opponents (Yellow Boxes):</strong> Tap the yellow boxes to select or add opponents</li>
-                        <li><strong>Quick Selection:</strong> Previously added players appear in a list for quick selection</li>
-                        <li><strong>Apple Watch:</strong> Uses the same intuitive blue/yellow box interface, optimized for the watch screen</li>
+                        <li><strong>Select Players:</strong> Tap the player spots on the New Game screen to choose your teammate and opponents</li>
+                        <li><strong>Quick Selection:</strong> Your <strong>Today's Roster</strong> makes it fast to pick from the players you’re playing with right now</li>
+                        <li><strong>Apple Watch:</strong> Quick game entry right from your wrist (perfect when your phone is in your bag)</li>
                     </ul>
                     Your player list automatically syncs between your iPhone and Apple Watch for a seamless experience.
                 </p>
@@ -109,9 +108,8 @@
                 <p>The iPhone app provides comprehensive statistics and insights:
                     <ul>
                         <li><strong>Win/Loss:</strong> Track your overall record and winning percentage</li>
-                        <li><strong>Performance:</strong> View your scoring trends and point differentials</li>
-                        <li><strong>Teammates:</strong> See who you play best with</li>
-                        <li><strong>Opponents:</strong> Analyze your performance against different opponents</li>
+                        <li><strong>My Performance:</strong> See scoring trends, point margin, close games, and more</li>
+                        <li><strong>Top Players:</strong> Find your best teammates and toughest opponents</li>
                         <li><strong>Consistency:</strong> Track your playing patterns and improvement</li>
                         <li><strong>Badges:</strong> Earn achievements as you play more games</li>
                     </ul>
@@ -181,7 +179,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 David Lewis. All rights reserved.</p>
+        <p>&copy; 2026 David Lewis. All rights reserved.</p>
     </footer>
 </body>
 </html> 
