--- a/about.html
+++ b/about.html
@@ -13,20 +13,20 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pickleballtracker.com/about">
+    <meta property="og:url" content="https://www.blackhawkpickle.com/about.html">
     <meta property="og:title" content="About Pickleball Tracker - Our Story">
     <meta property="og:description" content="Meet the team behind Pickleball Tracker and learn how our passion for pickleball inspired us to create the ultimate scoring and performance app.">
-    <meta property="og:image" content="pickleball_tracker_splash_icon.png">
+    <meta property="og:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
     <meta property="og:image:alt" content="Pickleball Tracker App Icon">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://pickleballtracker.com/about">
+    <meta name="twitter:url" content="https://www.blackhawkpickle.com/about.html">
     <meta name="twitter:title" content="About Pickleball Tracker - Our Story">
     <meta name="twitter:description" content="Meet the team behind Pickleball Tracker and learn how our passion for pickleball inspired us to create the ultimate scoring and performance app.">
-    <meta name="twitter:image" content="pickleball_tracker_splash_icon.png">
+    <meta name="twitter:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
     <meta name="twitter:image:alt" content="Pickleball Tracker App Icon">
 
     <!-- Additional SEO -->
@@ -34,7 +34,7 @@
     <meta name="robots" content="index, follow">
     <meta name="application-name" content="Pickleball Tracker">
     <meta name="apple-itunes-app" content="app-id=6744275703">
-    <link rel="canonical" href="https://pickleballtracker.com/about">
+    <link rel="canonical" href="https://www.blackhawkpickle.com/about.html">
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -55,13 +55,18 @@
     <div class="container">
         <div class="content-section">
             <img src="teamphoto.jpg" alt="Pickleball Tracker Team" class="team-photo">
-            <p>We discovered pickleball a few years ago and were immediately hooked by its unique blend of strategy, skill, and social interaction. As both players and developers, we saw an opportunity to create something that would help players track their games and progress.</p>
-            <p>Pickleball Tracker is the result of combining our passion for the sport with our software development expertise. It's designed to be the perfect companion for players who want to focus on their game while having a reliable way to track their matches.</p>
+            <p>Pickleball is addictive—in the best way. The strategy, the tiny adjustments, the community… once you’re in, you’re in. Pickleball Tracker started because we wanted a faster way to log games and a clearer way to understand what was actually helping us improve.</p>
+            <p>This app is built with care by a pickleball player and shaped by real feedback. If something feels confusing, if you have an idea, or if there’s a stat you wish existed, send it. We read every message and use it to make the app better for everyone.</p>
+            <p><strong>Thank you</strong> for being part of the Pickleball Tracker community.</p>
+            <p class="center">
+                <a class="cta-secondary" href="feedback.html">Send feedback</a>
+                <a class="cta-secondary" href="support.html">Get support</a>
+            </p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 David Lewis. All rights reserved.</p>
+        <p>&copy; 2026 David Lewis. All rights reserved.</p>
     </footer>
 </body>
 </html> 
