--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.blackhawkpickle.com/feedback">
+    <meta property="og:url" content="https://www.blackhawkpickle.com/feedback.html">
     <meta property="og:title" content="Pickleball Tracker Feedback - Share Your Experience">
     <meta property="og:description" content="Help shape the future of Pickleball Tracker. Share your feedback and suggestions for our score tracking and performance analysis app.">
     <meta property="og:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
@@ -23,7 +23,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.blackhawkpickle.com/feedback">
+    <meta name="twitter:url" content="https://www.blackhawkpickle.com/feedback.html">
     <meta name="twitter:title" content="Pickleball Tracker Feedback - Share Your Experience">
     <meta name="twitter:description" content="Help shape the future of Pickleball Tracker. Share your feedback and suggestions for our score tracking and performance analysis app.">
     <meta name="twitter:image" content="https://www.blackhawkpickle.com/pickleball_tracker_splash_icon.png">
@@ -34,7 +34,7 @@
     <meta name="robots" content="index, follow">
     <meta name="application-name" content="Pickleball Tracker">
     <meta name="apple-itunes-app" content="app-id=6744275703">
-    <link rel="canonical" href="https://www.blackhawkpickle.com/feedback">
+    <link rel="canonical" href="https://www.blackhawkpickle.com/feedback.html">
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -89,7 +89,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2025 David Lewis. All rights reserved.</p>
+            <p>&copy; 2026 David Lewis. All rights reserved.</p>
         </footer>
     </div>
 </body>
